header in process

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
+    <title>Module 1 Final Evaluation</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
-  <body>
-    <div class="page">
-      <include
-        src="./partials/header.html"
-        title="Bienvenidos a Adalab"
-      ></include>
-      <include src="./partials/main.html"></include>
-      <include src="./partials/footer.html"></include>
-    </div>
+  <body class="body">
+    <include src="./partials/header.html" title=""></include>
+    <include src="./partials/main.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
