--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,20 @@
       <nav class="header__container-menu">
         <a class="header__menu" href="https://adalab.es/"></a>
       </nav>
-      <section class="header__container">
-        <h1 class="header__title">anonymous proxy</h1>
-        <h2 class="header__subtitle">In hac habitasse platea dictumst</h2>
-      </section>
-      <nav class="header__arrow-container">
-        <a class="header__arrow" href=""></a>
-      </nav>
     </header>
 
-    
+    <main>
+      <section class="hero">
+        <section class="hero__container">
+          <h1 class="hero__title">anonymous proxy</h1>
+          <h2 class="hero__subtitle">In hac habitasse platea dictumst</h2>
+        </section>
+        <nav class="hero__arrow-container">
+          <a href="" class="hero__arrow"></a>
+        </nav>
+      </section>
+    </main>
+
     
   </body>
 </html>
