Add article two

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="html">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,7 +25,7 @@
           <h2 class="hero__subtitle">In hac habitasse platea dictumst</h2>
         </section>
         <nav class="hero__arrow-container">
-          <a href="" class="hero__arrow"></a>
+          <a href="#article2" class="hero__arrow"></a>
         </nav>
       </section>
       <article class="article1">
@@ -36,6 +36,22 @@
           luctus ex diam nec lectus. Vivamus semper sodales rutrum.
         </p>
         <a class="article1__button" href="">Go</a>
+      </article>
+      <article class="article2" id="article2">
+        <h2 class="article2__title">3 reason to purchase</h2>
+        <article class="article2__reason1">
+          <h3 class="article2__subtitle">Ut sed metus</h3>
+          <p>Lorem ipsum dolor sit amet consectetur.</p>
+        </article>
+        <article class="article2__reason2">
+          <h3 class="article2__subtitle">Curabitur ac erat</h3>
+          <p>Mauris mattis urna quis lorem molestie.</p>
+        </article>
+        <article class="article2__reason3">
+          <h3 class="article2__subtitle">Morbi dictum</h3>
+          <p>Aliquam in dolor et dolor tincidunt.</p>
+        </article>
+        <a class="article2__buttom" href=""> More reasons</a>
       </article>
     </main>
 
