Add footer semantic and somethings styles

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,31 @@
       </article>
     </main>
 
-    
+    <footer class="footer">
+      <nav class="footer__button-container">
+        <a href="" class="footer__button"></a>
+      </nav>
+      <nav>
+        <ul class="footer__links-blog">
+          <li><a href="">Articles</a></li>
+          <li><a href="">Books</a></li>
+          <li><a href="">Events</a></li>
+          <li><a href="">Reasons</a></li>
+          <li><a href="">Tips</a></li>
+        </ul>
+      </nav>
+      <nav class="footer__links-rrss">
+        <ul>
+          <li><a href="">Twitter</a></li>
+          <li><a href="">Instagram</a>/</li>
+          <li><a href="">Mastodon.social</a></li>
+        </ul>
+      </nav>
+      <section class="footer__small">
+        <small><a href="">&copy;2021</a></small>
+        <small><a href="">We 🧡 components</a></small>
+      </section>
+    </footer>
+
   </body>
 </html>
