Add Footer styles

--- a/public/index.html
+++ b/public/index.html
@@ -59,25 +59,25 @@
       <nav class="footer__button-container">
         <a href="" class="footer__button"></a>
       </nav>
-      <nav>
-        <ul class="footer__links-blog">
-          <li><a href="">Articles</a></li>
-          <li><a href="">Books</a></li>
-          <li><a href="">Events</a></li>
-          <li><a href="">Reasons</a></li>
-          <li><a href="">Tips</a></li>
+      <nav class="footer__links-blog">
+        <ul class="footer__list">
+          <li><a class="footer__links" href="">Articles</a></li>
+          <li><a class="footer__links" href="">Books</a></li>
+          <li><a class="footer__links" href="">Events</a></li>
+          <li><a class="footer__links" href="">Reasons</a></li>
+          <li><a class="footer__links" href="">Tips</a></li>
         </ul>
       </nav>
-      <nav class="footer__links-rrss">
-        <ul>
-          <li><a href="">Twitter</a></li>
-          <li><a href="">Instagram</a>/</li>
-          <li><a href="">Mastodon.social</a></li>
+      <nav class="footer__links-blog">
+        <ul class="footer__list">
+          <li><a class="footer__links" href="">Twitter</a></li>
+          <li><a class="footer__links" href="">Instagram</a></li>
+          <li><a class="footer__links" href="">Mastodon.social</a></li>
         </ul>
       </nav>
       <section class="footer__small">
-        <small><a href="">&copy;2021</a></small>
-        <small><a href="">We 🧡 components</a></small>
+        <small class="footer__copy">&copy;2021</small>
+        <small class="footer__copy">we 🧡 components</small>
       </section>
     </footer>
 
