--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body class="body">
-    <header class="header">
+    <header class="header" id="header">
       <nav class="header__container-menu">
         <a class="header__menu" href="https://adalab.es/"></a>
       </nav>
@@ -57,22 +57,24 @@
 
     <footer class="footer">
       <nav class="footer__button-container">
-        <a href="" class="footer__button"></a>
+        <a href="#header" class="footer__button"></a>
       </nav>
       <nav class="footer__links-blog">
         <ul class="footer__list">
-          <li><a class="footer__links" href="">Articles</a></li>
-          <li><a class="footer__links" href="">Books</a></li>
-          <li><a class="footer__links" href="">Events</a></li>
-          <li><a class="footer__links" href="">Reasons</a></li>
-          <li><a class="footer__links" href="">Tips</a></li>
+          <li><a class="footer__links" href="https://adalab.es/">Articles</a></li>
+          <li><a class="footer__links" href="https://adalab.es/">Books</a></li>
+          <li><a class="footer__links" href="https://adalab.es/">Events</a></li>
+          <li><a class="footer__links" href="https://adalab.es/">Reasons</a></li>
+          <li><a class="footer__links" href="https://adalab.es/">Tips</a></li>
         </ul>
       </nav>
       <nav class="footer__links-blog">
         <ul class="footer__list">
-          <li><a class="footer__links" href="">Twitter</a></li>
-          <li><a class="footer__links" href="">Instagram</a></li>
-          <li><a class="footer__links" href="">Mastodon.social</a></li>
+          <li><a class="footer__links" href="https://adalab.es/">Twitter</a></li>
+          <li><a class="footer__links" href="https://adalab.es/">Instagram</a></li>
+          <li>
+            <a class="footer__links" href="https://adalab.es/">Mastodon.social</a>
+          </li>
         </ul>
       </nav>
       <section class="footer__small">
