Add gradiant background

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,6 @@
       <nav class="header__container-menu">
         <a class="header__menu" href="https://adalab.es/"></a>
       </nav>
-    </header>
-
-    <main>
       <section class="hero">
         <section class="hero__container">
           <h1 class="hero__title">anonymous proxy</h1>
@@ -28,6 +25,9 @@
           <a href="#article2" class="hero__arrow"></a>
         </nav>
       </section>
+    </header>
+
+    <main>
       <article class="article1">
         <small class="article1__small">Insonmia tips</small>
         <h2 class="article1__title">Looking through a window</h2>
@@ -35,7 +35,7 @@
           Donec accumsan, nulla ut volutpat porttitor, quan odio tempus felis, at
           luctus ex diam nec lectus. Vivamus semper sodales rutrum.
         </p>
-        <a class="article1__button" href="">Go</a>
+        <a class="article1__button" href="https://adalab.es/">Go</a>
       </article>
       <article class="article2" id="article2">
         <h2 class="article2__title">3 reason to purchase</h2>
@@ -51,7 +51,7 @@
           <h3 class="article2__subtitle">Morbi dictum</h3>
           <p>Aliquam in dolor et dolor tincidunt.</p>
         </article>
-        <a class="article2__buttom" href=""> More reasons</a>
+        <a class="article2__buttom" href="https://adalab.es/"> More reasons</a>
       </article>
     </main>
 
