--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body class="body">
@@ -18,7 +23,7 @@
       </nav>
       <section class="hero">
         <section class="hero__container">
-          <h1 class="hero__title">anonymous proxy</h1>
+          <h1 class="hero__title">Anonymous Proxy</h1>
           <h2 class="hero__subtitle">In hac habitasse platea dictumst</h2>
         </section>
         <nav class="hero__arrow-container">
