--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body class="body">
